[package]
name = "canvas_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { path = "../canvas" }
amber_light = {path = "../amber_light"}
lazy_static = "1.4.0"
nannou = "0.18.1"
nannou_egui = "0.5.0"
